crates/pixi_build_rust/src/snapshots/pixi_build_rust__build_script__test__openssl@bash.snap
---
source: crates/pixi_build_rust/src/build_script.rs
expression: script
---
export OPENSSL_DIR="$PREFIX"
export PATH="$BUILD_PREFIX/bin:$PREFIX/bin:$PATH"

cargo install --locked --root "$PREFIX" --path "my-prefix-dir" --target-dir target --no-track  --force
