crates/pixi_build_rust/src/snapshots/pixi_build_rust__build_script__test__openssl@cmdexe.snap
---
source: crates/pixi_build_rust/src/build_script.rs
expression: script
---
SET OPENSSL_DIR="%PREFIX%"

cargo install --locked --root "%PREFIX%" --path "my-prefix-dir" --target-dir target --no-track  --force
if errorlevel 1 exit 1
